# mcptam

./: .CMakeLists.txt.swp  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README  README.md  mainpage.dox  package.xml  testgui.txt
cfg/: thresholdParams.cfg
cmake_modules/: FindCVD.cmake  FindG2O.cmake  FindGVars3.cmake  FindOpenGL.cmake  FindSUITESPARSE.cmake  FindTooN.cmake
groups/: camera_1.yaml  camera_2.yaml  cameras_1,2,3,4.yaml  cameras_1,2,4.yaml  cameras_1,2.yaml  cameras_1,3.yaml  cameras_1,4.yaml  cameras_1_2.yaml  cameras_3,4.yaml  cameras_apseye,lego.yaml
groups/.svn/: all-wcprops  entries
groups/.svn/text-base/: cameras_1,2,3.yaml.svn-base  cameras_2,3.yaml.svn-base  cameras_kinect,pseye,lego.yaml.svn-base  cameras_pseye,lego.yaml.svn-base
include/mcptam/: BundleAdjusterBase.h  BundleAdjusterCalib.h  BundleAdjusterMulti.h  BundleAdjusterSingle.h  CalibCornerPatch.h  CalibGridCorner.h  CalibImageTaylor.h  CameraCalibrator.h  CameraGroupSubscriber.h  ChainBundle.h  ChainBundleIncrementalCovariance.h  Cper.h  DeleteMeasurementsAction.h  DeletePointsAction.h  Dictionary.h  EditAction.h  EntropyComputation.h  FitGroundPlaneAction.h  FitPlaneAction.h  FlipAxisAction.h  FlipZAction.h  GLWindow2.h  GLWindowMenu.h  GuiCallBacks.h  KeyFrame.h  KeyFrameViewer.h  KeyFrameVisualizer.h  LevelHelpers.h  LoadStaticParamsClient.h  LoadStaticParamsGeneral.h  LoadStaticParamsServer.h  MEstimator.h  Map.h  MapEditor.h  MapMaker.h  MapMakerBase.h  MapMakerCalib.h  MapMakerClient.h  MapMakerClientBase.h  MapMakerServer.h  (+35 more)
launch/: camera_calibrator.launch  kinect_camera.launch  map_editor.launch  mcptam.launch  mcptam.rviz  mcptam_client.launch  mcptam_server.launch  pose_calibrator.launch  uvc_camera.launch
masks/: masks_1,2.yaml  masks_example.yaml
msg/: MapInfo.msg  MapMakerTiming.msg  NetworkKeyFrame.msg  NetworkMapPoint.msg  NetworkMeasurement.msg  NetworkMultiKeyFrame.msg  NetworkOutlier.msg  SelectedPointsCov.msg  SystemInfo.msg  TrackerCovInfo.msg  TrackerState.msg  TrackerTiming.msg
params/: CPER.yaml
scripts/: ci_install.bash  install.sh  install_ros.sh  mcptam_install.bash  ros_install.bash  run_tests.bash
src/: BundleAdjusterBase.cc  BundleAdjusterBase.cpp  BundleAdjusterCalib.cc  BundleAdjusterCalib.cpp  BundleAdjusterMulti.cc  BundleAdjusterMulti.cpp  BundleAdjusterSingle.cc  BundleAdjusterSingle.cpp  CalibCornerPatch.cc  CalibCornerPatch.cpp  CalibGridCorner.cc  CalibGridCorner.cpp  CalibImageTaylor.cc  CalibImageTaylor.cpp  CameraCalibrator.cc  CameraCalibrator.cpp  CameraGroupSubscriber.cc  CameraGroupSubscriber.cpp  ChainBundle.cc  ChainBundle.cpp  ChainBundleIncrementalCovariance.cc  DeleteMeasurementsAction.cc  DeletePointsAction.cc  EntropyComputation.cc  EntropyComputation.cpp  FitGroundPlaneAction.cc  FitPlaneAction.cc  FlipAxisAction.cc  FlipZAction.cc  GLWindow2.cc  GLWindow2.cpp  GLWindowMenu.cc  GLWindowMenu.cpp  GuiCallBacks.cpp  KeyFrame.cc  KeyFrame.cpp  KeyFrameViewer.cc  KeyFrameViewer.cpp  KeyFrameVisualizer.cc  Main.cc  (+72 more)
srv/: ModifyMap.srv  Reset.srv
test/: entropy_test.cpp  entropy_test.test  run_catkin_tests.bash
