<package>
  <name>mcptam</name>
  <version>0.1.2</version>
  <description>
     MCPTAM
  </description>
  <author>Adam Harmat, Michael Tribou</author>
  <maintainer email="adam.harmat@mail.mcgill.ca">Adam Harmat</maintainer>
  <license>GPV v3 http://www.gnu.org/licenses/gpl-3.0.html</license>
  <url>https://github.com/aharmat/mcptam/wiki</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libg2o</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libg2o</run_depend>

</package>


